cmake_minimum_required(VERSION 3.0.0)
project(serverAndClient)
add_subdirectory(server)
add_subdirectory(client)
# project(Server VERSION 0.1.0)
# project(Client VERSION 0.1.0)

# include(CTest)
# enable_testing()


#set(CPACK_PROJECT_NAME ${PROJECT_NAME})
#set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
#include(CPack)
